--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "express": "^4.17.1",
+    "mongodb": "^4.1.2",
     "pug": "^3.0.2"
   },
   "devDependencies": {
