--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "mongodb": "^4.1.2",
+    "multer": "^1.4.3",
     "pug": "^3.0.2"
   },
   "devDependencies": {
